1.3 support and tested on IBM add FAQ for JAM 1.3 trick fixed AW for 1.3 support upgraded DTD to 1.0 and added container attrib to aspect